# big-data-platform

./: .gitignore  .pre-commit-config.yaml  ETL_pipeline.py  README.md  conftest.py  generate_synthetic_data.py  pipeline.py  pyproject.toml  requirements.txt  telco_data.csv  telco_data.parquet
.github/workflows/: actions.yml
spark_code/: move_to_s3.py  spark1.py  spark2.py
synthetic_data/: .gitignore  main.py
terraform/: backend.tf  event_bridge.tf  outputs.tf  policies.tf  providers.tf  s3.tf  step_functions.tf  stfn.asl.json
tests/: test_spark.py
