[tool.poetry]
name = "synthetic data"
version = "0.1.0"
description = "generate synthetic data and store the data in parquet"
authors = ["sammygis <adedoyinsamuel25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
